Fixed spacing between badges, made background full screen

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,5 +1,5 @@
 body {
-  background:url(/img/bg.jpg);
+  background:url(/img/bg.jpg) center center fixed;
   background-size: 100%;
   background-repeat:no-repeat;
 }
@@ -78,6 +78,7 @@ body {
 
 .achievementlist {
   list-style-type: none;
+  padding-bottom: 100px;
 }
 
 .achievement {
@@ -85,7 +86,7 @@ body {
   vertical-align:bottom;
   text-align: center;
   width: 250px;
-  height: 120px;
+  height: 200px;
   margin: 10px 10px 10px 10px;
 }
 
